# ocfa

./: .gitignore  ARCHITECTURE.md  BUILD_CPP.md  CLAUDE.md  CODE_REVIEW_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_COMPLETION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  flow.md  plan.md  sdk.md  test_basic_pipeline.py  test_ir_liveness_detection.py  test_livecheck.py  test_r34_vs_r50.py
configs/: default_config.json  hi3516cv610_config.json  r34_config.json  x86_config.json
cpp/: CMakeLists.txt  README.md
cpp/examples/: CMakeLists.txt  benchmark_neon.cpp  demo_basic.cpp  demo_recognition.cpp
cpp/include/: inference_engine.h  ocfa_errors.h  ocfa_face_sdk.h  ocfa_types.h
cpp/src/core/: errors.cpp  sdk.cpp
cpp/src/inference/: engine_factory.cpp  nnie_engine.cpp  nnie_engine.h  onnx_engine.cpp  onnx_engine.h
cpp/src/utils/: image_utils.cpp  image_utils.h  math_utils.cpp  math_utils.h  neon_utils.cpp  neon_utils.h
data/: DATASETS_README.md  README.md  download_public_datasets.py  download_test_data.sh
data/samples/: README.md
docs/: README.md
models/: README.md  download_models.py
python/: requirements.txt  setup.py
python/examples/: demo_basic.py
python/ocfa/: __init__.py  comparison.py  config.py  database.py  feature.py  fusion.py  liveness.py  preprocessing.py  quality.py  sdk.py  utils.py
python/ocfa/models/: __init__.py  arcface.py  ir_face_detector.py  minifasnet.py
python/tests/: run_tests.py  test_config.py  test_database.py  test_utils.py
python/tools/: benchmark.py  convert_minifasnet.py  create_calibration_data.py  create_dummy_models.py  download_models.py  evaluate.py  model_export.py  quantization.py  validate_quantized_models.py
